# modern-cpp-programming-cookbook

./: README.md
ch3/string_library/: main.cpp  meson.build
ch3/string_library/src/: string_library.hpp  string_library_test.cpp
